# notecard-next-rs

./: .nvim.lua  Cargo.toml  rust-toolchain.toml
.zed/: settings.json
examples/custom-stm32l4/: Cargo.toml
examples/custom-stm32l4/.cargo/: config.toml
examples/swan/: Cargo.toml
examples/swan/.cargo/: config.toml
notecard/: Cargo.toml  README.md
notecard/notecard-macro/: Cargo.toml
notecard/notecard-macro/src/: lib.rs
notecard/src/: error.rs  hub.rs  lib.rs
