[package]
name = "blues-notecard-next"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", default-features = false }
defmt = "0.3"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
heapless = { version = "0.8.0", features = ["serde", "ufmt", "defmt-03"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
