[package]
name = "blues-notecard-next"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", default-features = false }
defmt = "1.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
heapless = { version = "0.9", features = ["serde", "ufmt", "defmt"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
